// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <Portal /> renders correctly on the client 1`] = `
<div
  class="TestPortalComponent"
/>
`;

exports[`[presentation] <Portal /> renders correctly on the server 1`] = `
<div
  class="Portal-inPlace"
>
  <div
    class="TestPortalComponent"
  />
</div>
`;
